// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiRadioGroup is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiRadioGroup testClass1 testClass2 emotion-euiRadioGroup-euiTestCss"
  data-test-subj="test subject string"
/>
`;

exports[`EuiRadioGroup props idSelected is rendered 1`] = `
<div
  class="euiRadioGroup emotion-euiRadioGroup"
>
  <div
    class="euiRadio euiRadioGroup__item emotion-euiRadio"
  >
    <div
      class="euiRadio__circle emotion-euiRadio__circle-selected"
    >
      <span
        class="emotion-euiRadio__icon"
        data-euiicon-type="dot"
      />
      <input
        checked=""
        class="euiRadio__input emotion-euiRadio__input"
        id="1"
        type="radio"
        value=""
      />
    </div>
    <label
      class="euiRadio__label emotion-euiRadio__label"
      for="1"
    >
      Option #1
    </label>
  </div>
  <div
    class="euiRadio euiRadioGroup__item emotion-euiRadio"
  >
    <div
      class="euiRadio__circle emotion-euiRadio__circle-unselected"
    >
      <span
        class="emotion-euiRadio__icon"
        data-euiicon-type="empty"
      />
      <input
        class="euiRadio__input emotion-euiRadio__input"
        id="2"
        type="radio"
        value=""
      />
    </div>
    <label
      class="euiRadio__label emotion-euiRadio__label"
      for="2"
    >
      Option #2
    </label>
  </div>
</div>
`;

exports[`EuiRadioGroup props legend is rendered 1`] = `
<fieldset
  class="euiRadioGroup emotion-euiRadioGroup"
>
  <legend
    class="euiFormLegend emotion-euiFormLegend"
  >
    A legend
  </legend>
  <div
    class="euiRadio euiRadioGroup__item emotion-euiRadio"
  >
    <div
      class="euiRadio__circle emotion-euiRadio__circle-unselected"
    >
      <span
        class="emotion-euiRadio__icon"
        data-euiicon-type="empty"
      />
      <input
        class="euiRadio__input emotion-euiRadio__input"
        id="1"
        type="radio"
        value=""
      />
    </div>
    <label
      class="euiRadio__label emotion-euiRadio__label"
      for="1"
    >
      Option #1
    </label>
  </div>
  <div
    class="euiRadio euiRadioGroup__item emotion-euiRadio"
  >
    <div
      class="euiRadio__circle emotion-euiRadio__circle-unselected"
    >
      <span
        class="emotion-euiRadio__icon"
        data-euiicon-type="empty"
      />
      <input
        class="euiRadio__input emotion-euiRadio__input"
        id="2"
        type="radio"
        value=""
      />
    </div>
    <label
      class="euiRadio__label emotion-euiRadio__label"
      for="2"
    >
      Option #2
    </label>
  </div>
</fieldset>
`;

exports[`EuiRadioGroup props name is propagated to radios 1`] = `
<div
  class="euiRadioGroup emotion-euiRadioGroup"
>
  <div
    class="euiRadio euiRadioGroup__item emotion-euiRadio"
  >
    <div
      class="euiRadio__circle emotion-euiRadio__circle-unselected"
    >
      <span
        class="emotion-euiRadio__icon"
        data-euiicon-type="empty"
      />
      <input
        class="euiRadio__input emotion-euiRadio__input"
        id="1"
        name="radiogroupname"
        type="radio"
        value=""
      />
    </div>
    <label
      class="euiRadio__label emotion-euiRadio__label"
      for="1"
    >
      Option #1
    </label>
  </div>
  <div
    class="euiRadio euiRadioGroup__item emotion-euiRadio"
  >
    <div
      class="euiRadio__circle emotion-euiRadio__circle-unselected"
    >
      <span
        class="emotion-euiRadio__icon"
        data-euiicon-type="empty"
      />
      <input
        class="euiRadio__input emotion-euiRadio__input"
        id="2"
        name="radiogroupname"
        type="radio"
        value=""
      />
    </div>
    <label
      class="euiRadio__label emotion-euiRadio__label"
      for="2"
    >
      Option #2
    </label>
  </div>
</div>
`;

exports[`EuiRadioGroup props options are rendered 1`] = `
<div
  class="euiRadioGroup emotion-euiRadioGroup"
>
  <div
    class="euiRadio euiRadioGroup__item emotion-euiRadio"
  >
    <div
      class="euiRadio__circle emotion-euiRadio__circle-unselected"
    >
      <span
        class="emotion-euiRadio__icon"
        data-euiicon-type="empty"
      />
      <input
        class="euiRadio__input emotion-euiRadio__input"
        id="1"
        type="radio"
        value=""
      />
    </div>
    <label
      class="euiRadio__label emotion-euiRadio__label"
      for="1"
    >
      Option #1
    </label>
  </div>
  <div
    class="euiRadio euiRadioGroup__item emotion-euiRadio"
  >
    <div
      class="euiRadio__circle emotion-euiRadio__circle-disabled-unselected"
    >
      <span
        class="emotion-euiRadio__icon"
        data-euiicon-type="empty"
      />
      <input
        class="euiRadio__input emotion-euiRadio__input"
        disabled=""
        id="2"
        type="radio"
        value=""
      />
    </div>
    <label
      class="euiRadio__label emotion-euiRadio__label-disabled"
      for="2"
    >
      Option #2
    </label>
  </div>
</div>
`;

exports[`EuiRadioGroup props value is propagated to radios 1`] = `
<div
  class="euiRadioGroup emotion-euiRadioGroup"
>
  <div
    class="euiRadio euiRadioGroup__item emotion-euiRadio"
  >
    <div
      class="euiRadio__circle emotion-euiRadio__circle-unselected"
    >
      <span
        class="emotion-euiRadio__icon"
        data-euiicon-type="empty"
      />
      <input
        class="euiRadio__input emotion-euiRadio__input"
        id="1"
        name="radiogroupname"
        type="radio"
        value="Value #1"
      />
    </div>
    <label
      class="euiRadio__label emotion-euiRadio__label"
      for="1"
    >
      Option #1
    </label>
  </div>
  <div
    class="euiRadio euiRadioGroup__item emotion-euiRadio"
  >
    <div
      class="euiRadio__circle emotion-euiRadio__circle-unselected"
    >
      <span
        class="emotion-euiRadio__icon"
        data-euiicon-type="empty"
      />
      <input
        class="euiRadio__input emotion-euiRadio__input"
        id="2"
        name="radiogroupname"
        type="radio"
        value="Value #2"
      />
    </div>
    <label
      class="euiRadio__label emotion-euiRadio__label"
      for="2"
    >
      Option #2
    </label>
  </div>
</div>
`;
